# incubator-teaclave-sgx-sdk

./: .asf.yaml  .gitignore  .gitmodules  .licenserc.yaml  Cargo.toml  DISCLAIMER  LICENSE  NOTICE  README.md  Readme.md  SECURITY.md  WORKSPACE  buildenv.mk  release_notes.md  rust-toolchain
sgx-type-debug/: Cargo.toml
sgx_align_struct_attribute/: Cargo.toml
sgx_align_struct_attribute/src/: align.rs  layout.rs  lib.rs
sgx_alloc/: BUILD.bazel  Cargo.toml  build.rs
sgx_alloc/src/: alignalloc.rs  alignbox.rs  capi.rs  lib.rs  rsrvmem.rs  system.rs
sgx_backtrace/: Cargo.toml
sgx_backtrace/sgx_backtrace_sys/: Cargo.toml  build.rs
sgx_backtrace/sgx_backtrace_sys/libbacktrace/: backtrace_t.h  configure  edtest2.c  elf.c  internal.h  mmapio.c  print.c  read.c  simple.c  state.c  stest.c  ttest.c  unknown.c  xcoff.c  ztest.c
sgx_backtrace/sgx_backtrace_sys/src/: lib.rs
sgx_backtrace/src/: capture.rs  lib.rs  print.rs  types.rs
sgx_backtrace/src/backtrace/: libunwind.rs  mod.rs
sgx_backtrace/src/symbolize/: libbacktrace.rs  mod.rs
sgx_backtrace_sys/: Cargo.toml  build.rs
sgx_backtrace_sys/libbacktrace/: backtrace_t.h  btest.c  config.sub  fileline.c  macho.c  mmap.c  mmapio.c  pecoff.c  read.c  sort.c  testlib.h
sgx_backtrace_sys/src/: lib.rs
sgx_build_helper/: BUILD.bazel  Cargo.toml  LICENSE  lib.rs
sgx_build_helper/build_helper/: Cargo.toml
sgx_build_helper/build_helper/src/: lib.rs
sgx_build_helper/download_prebuilt/: Cargo.toml  Makefile  build.rs  download_prebuilt.sh
sgx_build_helper/src/: lib.rs
sgx_cov/: Cargo.toml  lib.rs
sgx_cov/fake_profiler_builtins/: Cargo.toml  lib.rs
sgx_cov/src/: lib.rs
sgx_crypto/: Cargo.toml
sgx_crypto/sgx_crypto_sys/: Cargo.toml  build.rs
sgx_crypto/sgx_crypto_sys/src/: lib.rs
sgx_crypto/sgx_crypto_sys/tcrypto/: Makefile  sgx_common_init_ipp.cpp
sgx_crypto/src/: lib.rs
sgx_crypto/src/aes/: cbc.rs  ccm.rs  ctr.rs  gcm.rs  mod.rs
sgx_crypto/src/ecc/: mod.rs
sgx_crypto/src/mac/: cmac.rs  hmac.rs  mod.rs
sgx_crypto/src/rsa/: mod.rs  rsa2048.rs  rsa3072.rs
sgx_crypto/src/sha/: mod.rs  sha1.rs  sha256.rs  sha384.rs
sgx_crypto/src/sm/: mod.rs
sgx_crypto_helper/: Cargo.toml  build.rs
sgx_crypto_helper/examples/: rsa.rs
sgx_crypto_helper/src/: crypto_direct.rs  lib.rs  rsa2048.rs  rsa3072.rs
sgx_demangle/: Cargo.toml
sgx_demangle/src/: legacy.rs  lib.rs  v0.rs
sgx_edl/: Cargo.toml
sgx_edl/common/inc/: assert.h  ctype.h  endian.h  inttypes.h  limits.h  mbusafecrt.h  netdb.h  poll.h  sched.h  stdarg.h  wchar.h
sgx_edl/edl/: sgx_asyncio.edl  sgx_backtrace.edl  sgx_cpuid.edl  sgx_dcap_tkey_exchange_initiator.edl  sgx_dcap_tkey_exchange_responder.edl  sgx_dcap_tvl.edl  sgx_env.edl  sgx_fd.edl  sgx_file.edl  sgx_fs.edl  sgx_mem.edl  sgx_msbuf.edl  sgx_net.edl  sgx_pipe.edl  sgx_process.edl  sgx_socket.edl  sgx_stdio.edl  sgx_sync.edl  sgx_sys.edl  sgx_thread.edl  sgx_time.edl  sgx_tkey_exchange.edl  sgx_tprotected_fs.edl  sgx_tstd.edl  sgx_tswitchless.edl
sgx_edl/edl/inc/: addrinfo.h  dirent.h  stat.h
sgx_edl/edl/intel/: sgx_dcap_tvl.edl
sgx_edl/src/: lib.rs
sgx_libc/: BUILD  Cargo.toml
sgx_libc/sgx_tlibc_sys/: Cargo.toml  build.rs
sgx_libc/sgx_tlibc_sys/src/: lib.rs
sgx_libc/sgx_tlibc_sys/tlibc/: Makefile
sgx_libc/sgx_tlibc_sys/tsafecrt/: Makefile
sgx_libc/src/: ascii.rs  c_str.rs  lib.rs  macros.rs  memchr.rs
sgx_libc/src/android/: mod.rs
sgx_libc/src/linux/: mod.rs
sgx_new_edl/: Cargo.toml
sgx_new_edl/sgx_edl_macros/: Cargo.toml
sgx_new_edl/sgx_edl_macros/src/: lib.rs  ocall.rs
sgx_new_edl/src/: arg.rs  args.rs  ecall.rs  lib.rs  ocall.rs  ser.rs
sgx_no_tstd/: Cargo.toml  build.rs
sgx_no_tstd/src/: lib.rs
sgx_panic_abort/: Cargo.toml  lib.rs
sgx_panic_abort/src/: lib.rs
sgx_panic_unwind/: Cargo.toml  gcc.rs  lib.rs
sgx_panic_unwind/dwarf/: mod.rs
sgx_panic_unwind/src/: gcc.rs  lib.rs
sgx_panic_unwind/src/dwarf/: eh.rs  mod.rs
sgx_rand/: Cargo.toml
sgx_rand/derive/: Cargo.toml
sgx_rand/derive/src/: lib.rs
sgx_rand/src/: chacha.rs  isaac.rs  lib.rs  os.rs  rand_impls.rs  read.rs  reseeding.rs
sgx_rand/src/distributions/: exponential.rs  gamma.rs  mod.rs  normal.rs  range.rs  ziggurat_tables.rs
sgx_rand_derive/: Cargo.toml
sgx_rand_derive/src/: lib.rs
sgx_serialize/: Cargo.toml
sgx_serialize/derive/: Cargo.toml
sgx_serialize/derive/src/: bound.rs  decode.rs  encode.rs  fragment.rs  lib.rs  param.rs
sgx_serialize/src/: collection.rs  json.rs  leb128.rs  lib.rs  opaque.rs  serialize.rs  types.rs
sgx_serialize_derive/: Cargo.toml
sgx_serialize_derive/src/: bound.rs  decode.rs  encode.rs  fragment.rs  lib.rs  param.rs
sgx_serialize_derive_internals/: Cargo.toml
sgx_serialize_derive_internals/src/: ast.rs  ctxt.rs  lib.rs
sgx_tcrypto/: Cargo.toml  Readme.md
sgx_tcrypto/src/: crypto.rs  lib.rs
sgx_tcrypto_helper/: Cargo.toml  Readme.md  build.rs
sgx_tcrypto_helper/src/: lib.rs  rsa2048.rs  rsa3072.rs
sgx_tdh/: Cargo.toml
sgx_tdh/src/: capi.rs  dh.rs  ecp.rs  lib.rs  message.rs
sgx_tdh/src/session/: initiator.rs  mod.rs  responder.rs
sgx_tkey_exchange/: Cargo.toml
sgx_tkey_exchange/src/: lib.rs
sgx_tprotected_fs/: BUILD.bazel  Cargo.toml
sgx_tprotected_fs/src/: fs.rs  lib.rs
sgx_trts/: BUILD  Cargo.toml  build.rs
sgx_trts/src/: aex.rs  aexnotify.rs  arch.rs  ascii.rs  c_str.rs  capi.rs  cpu_feature.rs  cpuid.rs  emm.rs  enclave.rs  error.rs  fence.rs  lib.rs  libc.rs  local.rs  macros.rs  memchr.rs  memeq.rs  oom.rs  panic.rs  panicking.rs  pkru.rs  rand.rs  stackchk.rs  trts.rs  veh.rs  version.rs  xsave.rs
sgx_trts/src/asm/: cet.S  macro.S  metadata.S  mod.rs  pic.S  thunk.S  xsave.S
sgx_trts/src/call/: ecall.rs  mod.rs  msbuf.rs  ocall.rs  ocalloc.rs
sgx_trts/src/edmm/: epc.rs  layout.rs  mem.rs  mod.rs  perm.rs  tcs.rs  trim.rs
sgx_trts/src/elf/: control_flow.rs  dynamic.rs  header.rs  mod.rs  slice.rs  (+4 more)
sgx_tse/: Cargo.toml
sgx_tse/src/: alignalloc.rs  alignbox.rs  alloc.rs  capi.rs  lib.rs  se.rs
sgx_tseal/: Cargo.toml
sgx_tseal/src/: aad.rs  capi.rs  internal.rs  lib.rs  seal.rs
(+1962 files in other folders)
