[workspace]
members = [
    "sgx_types",
    "sgx_tcrypto",
    "sgx_trts",
    "sgx_tse",
    "sgx_tseal",
    "sgx_tkey_exchange",
    "sgx_tdh",
    "sgx_tservice",
    "samplecode/crypto/enclave",
    "samplecode/helloworld/enclave",
    "samplecode/localattestation/enclave1",
    "samplecode/localattestation/enclave2",
    "samplecode/localattestation/enclave3",
    "samplecode/sealeddata/enclave",
    "samplecode/thread/enclave",

]
