[package]
authors = ["The Teaclave Authors"]
name = "sgx-type-debug"
version = "0.1.0"
repository = "https://github.com/apache/teaclave-sgx-sdk"
license-file = "LICENSE"
documentation = "https://dingelish.github.io/"
description = "Rust SGX SDK provides the ability to write Intel SGX applications in Rust Programming Language."
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = "1.0"
