
[package]
name = "sgx_backtrace"
version = "1.1.1"
authors = ["The Teaclave Authors"]
repository = "https://github.com/apache/teaclave-sgx-sdk"
license-file = "LICENSE"
documentation = "https://dingelish.github.io/"
description = "Rust SGX SDK provides the ability to write Intel SGX applications in Rust Programming Language."
edition = "2018"

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_demangle = "=1.1.1"
sgx_backtrace_sys = "=1.1.1"
sgx_libc = "=1.1.1"
sgx_unwind = "=1.1.1"
sgx_types = "=1.1.1"
sgx_trts = "=1.1.1"
sgx_tstd = "=1.1.1"
sgx_serialize = { version = "=1.1.1", optional = true }

[dependencies]
sgx_serialize_derive = { path = "../sgx_serialize_derive" }

[features]
default = ["std"]
std = []
serialize = ["sgx_serialize"]
