
[package]
name = "sgx_backtrace"
version = "1.1.4"
authors = ["The Teaclave Authors"]
repository = "https://github.com/apache/teaclave-sgx-sdk"
license-file = "LICENSE"
documentation = "https://teaclave.apache.org/sgx-sdk-docs/"
description = "Rust SGX SDK provides the ability to write Intel SGX applications in Rust Programming Language."
edition = "2018"

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_demangle = { path = "../sgx_demangle" }
sgx_backtrace_sys = { path = "../sgx_backtrace_sys" }
sgx_libc = { path = "../sgx_libc" }
sgx_types = { path = "../sgx_types" }
sgx_trts = { path = "../sgx_trts" }
sgx_tstd = { path = "../sgx_tstd", optional = true }
sgx_unwind = { path = "../sgx_unwind", optional = true }
sgx_serialize = { path = "../sgx_serialize", optional = true }

[dependencies]
sgx_serialize_derive = { path = "../sgx_serialize_derive" }

[features]
default = ["std"]
std = ["sgx_tstd"]
nostd = ["sgx_unwind"]
serialize = ["sgx_serialize"]
