# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "sgx_backtrace"
version = "2.0.0"
authors = ["The Teaclave Authors"]
repository = "https://github.com/apache/teaclave-sgx-sdk"
license-file = "LICENSE"
documentation = "https://teaclave.apache.org/sgx-sdk-docs/"
description = "Rust SGX SDK provides the ability to write Intel SGX applications in Rust Programming Language."
edition = "2021"

[features]
default = ["std"]
std = ["sgx_tstd"]
nostd = ["sgx_unwind"]
serialize = ["sgx_serialize"]

[target.'cfg(not(target_vendor = "teaclave"))'.dependencies]
sgx_types = { path = "../sgx_types" }
sgx_demangle = { path = "../sgx_demangle" }
sgx_backtrace_sys = { path = "./sgx_backtrace_sys" }
sgx_tlibc_sys = { path = "../sgx_libc/sgx_tlibc_sys" }
sgx_trts = { path = "../sgx_trts" }
sgx_ffi = { path = "../sgx_ffi" }
sgx_tstd = { path = "../sgx_tstd", optional = true }
sgx_unwind = { path = "../sgx_unwind", optional = true }

[dependencies]
sgx_serialize = { path = "../sgx_serialize", features = ["derive"], optional = true }
