[package]
name = "sgx_backtrace_sys"
version = "1.1.1"
authors = ["The Teaclave Authors"]
build = "build.rs"
repository = "https://github.com/apache/teaclave-sgx-sdk"
license-file = "LICENSE"
documentation = "https://dingelish.github.io/"
description = "Rust SGX SDK provides the ability to write Intel SGX applications in Rust Programming Language."
edition = "2018"


[lib]
name = "sgx_backtrace_sys"
crate-type = ["rlib"]

[features]
default = []

[build-dependencies]
cc = "1.0"
sgx_build_helper = "0.1.3"

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_libc = "=1.1.1"
