[package]
name = "sgx_backtrace_sys"
version = "1.1.4"
authors = ["The Teaclave Authors"]
repository = "https://github.com/apache/teaclave-sgx-sdk"
license-file = "LICENSE"
documentation = "https://teaclave.apache.org/sgx-sdk-docs/"
description = "Rust SGX SDK provides the ability to write Intel SGX applications in Rust Programming Language."
edition = "2018"


[lib]
name = "sgx_backtrace_sys"
crate-type = ["rlib"]

[features]
default = []

[build-dependencies]
cc = "1.0"
sgx_build_helper = { path = "../sgx_build_helper" }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_libc = { path = "../sgx_libc" }