[package]
name = "sgx_cov"
version = "0.1.0"
authors = ["MesaTEE Authors"]
description = "Enabling gcov for SGX crates."
edition = "2018"

[lib]
name = "sgx_cov"
path = "lib.rs"

[dependencies]
lazy_static = { version = "1", features = ["spin_no_std"] }
profiler_builtins = { git = "https://github.com/mesalock-linux/sgx-fake-profiler-builtins" }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types   = { git = "https://github.com/baidu/rust-sgx-sdk", rev = "v1.0.8" }
sgx_tstd    = { git = "https://github.com/baidu/rust-sgx-sdk", rev = "v1.0.8" }
sgx_rand    = { git = "https://github.com/baidu/rust-sgx-sdk", rev = "v1.0.8" }
