[package]
name = "sgx_cov"
version = "1.1.3"
authors = ["The Teaclave Authors"]
repository = "https://github.com/apache/teaclave-sgx-sdk"
license-file = "LICENSE"
documentation = "https://dingelish.github.io/"
description = "Enabling gcov for SGX crates."
edition = "2018"

[lib]
name = "sgx_cov"
path = "lib.rs"

[dependencies]
lazy_static = { version = "1", features = ["spin_no_std"] }
profiler_builtins = { git = "https://github.com/mesalock-linux/sgx-fake-profiler-builtins" }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types   = { path = "../sgx_types" }
sgx_tstd    = { path = "../sgx_tstd" }
sgx_rand    = { path = "../sgx_rand" }
