[package]
name = "sgx_crypto_helper"
version = "1.1.4"
authors = ["The Teaclave Authors"]
repository = "https://github.com/apache/teaclave-sgx-sdk"
license-file = "LICENSE"
documentation = "https://teaclave.apache.org/sgx-sdk-docs/"
description = "Rust SGX SDK provides the ability to write Intel SGX applications in Rust Programming Language."
edition = "2018"

[lib]
name = "sgx_crypto_helper"
crate-type = ["staticlib","rlib"]

[features]
default = ["ucrypto_help"]
ucrypto_help = [
    "sgx_ucrypto",
    "libc",
    "serde",
    "serde_derive",
    "serde-big-array"]
mesalock_sgx = [
    "sgx_tcrypto",
    "sgx_tstd",
    "serde-sgx",
    "serde_derive-sgx",
    "serde-big-array-sgx"]

[dependencies]
sgx_ucrypto = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
libc = { version = "0.2", optional = true }
itertools = { version = "*", default-features = false }
serde = { version = "1.0.104", optional = true }
serde_derive = { version = "1.0.104", optional = true }
serde-big-array = { version = "0.1", optional = true }
serde-sgx = { git = "https://github.com/mesalock-linux/serde-sgx", package = 'serde', optional = true }
serde_derive-sgx = { git = "https://github.com/mesalock-linux/serde-sgx", package = 'serde_derive', optional = true }
serde-big-array-sgx = { git = "https://github.com/mesalock-linux/serde-big-array-sgx", package = 'serde-big-array', optional = true }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tcrypto = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
sgx_tstd    = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
sgx_types   = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }

[dev-dependencies]
sgx_ucrypto = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
rdrand = "0.6"
rand_core = "0.4"
serde_json = "*"
