[package]
name = "sgx_crypto_helper"
version = "1.1.6"
authors = ["The Teaclave Authors"]
repository = "https://github.com/apache/teaclave-sgx-sdk"
license-file = "LICENSE"
documentation = "https://teaclave.apache.org/sgx-sdk-docs/"
description = "Rust SGX SDK provides the ability to write Intel SGX applications in Rust Programming Language."
edition = "2021"

[lib]
name = "sgx_crypto_helper"
crate-type = ["staticlib","rlib"]

[features]
default = ["ucrypto_help"]
rsa2048 = []
crypto = []
ucrypto_help = [
    # "sgx_ucrypto",
    "libc",
    "serde",
    "serde_derive",
    "serde-big-array"]
mesalock_sgx = [
    # "sgx_tcrypto",
    "sgx_tstd",
    "serde-sgx",
    "serde_derive-sgx",
    "serde-big-array-sgx"]
# impl encrypt_buffer/etc WIHOUT using sgx_ucrypto nor sgx_tcrypto
crypto_direct = ["rsa", "sha2", "rand", "num-bigint"]

[dependencies]
# sgx_ucrypto = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
libc = { version = "0.2", optional = true }
itertools = { version = "*", default-features = false }
serde = { version = "1.0.104", optional = true }
serde_derive = { version = "1.0.104", optional = true }
serde-big-array = { version = "0.1", optional = true }
serde-sgx = { git = "https://github.com/mesalock-linux/serde-sgx", package = 'serde', optional = true }
serde_derive-sgx = { git = "https://github.com/mesalock-linux/serde-sgx", package = 'serde_derive', optional = true }
serde-big-array-sgx = { git = "https://github.com/mesalock-linux/serde-big-array-sgx", package = 'serde-big-array', optional = true }
rsa = { optional = true, version = "0.8", default-features = false }
sha2 = { optional = true, version = "0.10", default-features = false }
rand = { optional = true, version = "0.8" }
# SOME deps of our main libs(=imageproc) use "num v0.4.0" so we must default to an old version
#     = note: struct `num_bigint::BigUint` and struct `rsa::BigUint` have similar names, but are actually distinct types
# note: struct `num_bigint::BigUint` is defined in crate `num_bigint`
#    --> /home/xxx/.cargo/registry/src/github.com-1ecc6299db9ec823/num-bigint-0.4.3/src/biguint.rs:38:1
# 38  | pub struct BigUint {
#     | ^^^^^^^^^^^^^^^^^^
# note: struct `rsa::BigUint` is defined in crate `num_bigint_dig`
#    --> /home/xxx/.cargo/registry/src/github.com-1ecc6299db9ec823/num-bigint-dig-0.8.2/src/biguint.rs:94:1
num-bigint = { optional = true, version = "0.8", default-features = false, package = "num-bigint-dig" }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
# sgx_tcrypto = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
sgx_tstd    = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
sgx_types   = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }

[dev-dependencies]
sgx_ucrypto = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
rdrand = "0.6"
rand_core = "0.4"
serde_json = "*"
