# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "sgx_libc"
version = "2.0.0"
authors = ["The Teaclave Authors"]
repository = "https://github.com/apache/teaclave-sgx-sdk"
license-file = "LICENSE"
documentation = "https://teaclave.apache.org/sgx-sdk-docs/"
description = "Rust SGX SDK provides the ability to write Intel SGX applications in Rust Programming Language."
edition = "2021"

[lib]
name = "sgx_libc"
crate-type = ["rlib"]

[features]
default = ["panic_on_unsupported_syscall"]
extra_traits = ["sgx_oc/extra_traits"]
pthread = ["sgx_trts/thread"]
panic_on_unsupported_syscall = []

[target.'cfg(not(target_vendor = "teaclave"))'.dependencies]
sgx_ffi = { path = "../sgx_ffi" }
sgx_oc = { path = "../sgx_oc" }
sgx_trts = { path = "../sgx_trts" }
sgx_types = { path = "../sgx_types" }
sgx_tlibc_sys = { path = "./sgx_tlibc_sys" }
sgx_sync = { path = "../sgx_sync" }
