[package]
name = "panic_unwind"
version = "0.0.0"
authors = ["The Teaclave Authors"]
repository = "https://github.com/apache/teaclave-sgx-sdk"
license-file = "LICENSE"
documentation = "https://dingelish.github.io/"
description = "Rust SGX SDK provides the ability to write Intel SGX applications in Rust Programming Language."
edition = "2018"

[lib]
test = false
bench = false
doc = false

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_libc = { path = "../sgx_libc" }
sgx_unwind = { path = "../sgx_unwind" }
