[package]
name = "sgx_rand_derive"
version = "1.0.6"
authors = ["Baidu"]
repository = "https://github.com/baidu/rust-sgx-sdk"
license-file = "LICENSE"
documentation = "https://dingelish.github.io/"
description = "Rust SGX SDK provides the ability to write Intel SGX applications in Rust Programming Language."

include = [
    "LICENSE",
    "Readme.md",
    "Cargo.toml",
    "src/lib.rs",
]

[lib]
name = "sgx_rand_derive"
proc-macro = true

[dependencies]
quote = "0.3"
syn = "0.11"
