[package]
name = "sgx_rand_derive"
version = "1.1.3"
authors = ["The Teaclave Authors"]
repository = "https://github.com/apache/teaclave-sgx-sdk"
license-file = "LICENSE"
documentation = "https://dingelish.github.io/"
description = "Rust SGX SDK provides the ability to write Intel SGX applications in Rust Programming Language."
edition = "2018"

[lib]
name = "sgx_rand_derive"
proc-macro = true

[dependencies]
quote = "0.3"
syn = "0.11"
