[package]
name = "sgx_rand_derive"
version = "1.1.4"
authors = ["The Teaclave Authors"]
repository = "https://github.com/apache/teaclave-sgx-sdk"
license-file = "LICENSE"
documentation = "https://teaclave.apache.org/sgx-sdk-docs/"
description = "Rust SGX SDK provides the ability to write Intel SGX applications in Rust Programming Language."
edition = "2018"

[lib]
name = "sgx_rand_derive"
proc-macro = true

[dependencies]
quote = "0.3"
syn = "0.11"
