[package]
name = "sgx_serialize_derive"
version = "1.0.8"
authors = ["Baidu"]
repository = "https://github.com/baidu/rust-sgx-sdk"
license-file = "LICENSE"
documentation = "https://dingelish.github.io/"
description = "Rust SGX SDK provides the ability to write Intel SGX applications in Rust Programming Language."

include = [
    "LICENSE",
    "Readme.md",
    "Cargo.toml",
    "src/decode.rs",
    "src/bound.rs",
    "src/fragment.rs",
    "src/encode.rs",
    "src/param.rs",
    "src/lib.rs",
]

[lib]
name = "sgx_serialize_derive"
proc-macro = true

[dependencies]
quote = "0.3.8"
syn = "0.11"
sgx_serialize_derive_internals = { path = "../sgx_serialize_derive_internals" }
