[package]
name = "sgx_serialize_derive_internals"
version = "1.0.9-preview"
authors = ["Baidu"]
repository = "https://github.com/baidu/rust-sgx-sdk"
license-file = "LICENSE"
documentation = "https://dingelish.github.io/"
description = "Rust SGX SDK provides the ability to write Intel SGX applications in Rust Programming Language."
edition = "2018"

[lib]
name = "sgx_serialize_derive_internals"
crate-type = ["rlib"]

[dependencies]
syn = "0.11"
