[package]
name = "sgx_serialize_derive_internals"
version = "1.1.4"
authors = ["The Teaclave Authors"]
repository = "https://github.com/apache/teaclave-sgx-sdk"
license-file = "LICENSE"
documentation = "https://teaclave.apache.org/sgx-sdk-docs/"
description = "Rust SGX SDK provides the ability to write Intel SGX applications in Rust Programming Language."
edition = "2018"

[lib]
name = "sgx_serialize_derive_internals"
crate-type = ["rlib"]

[dependencies]
syn = "0.11"
