[package]
name = "sgx_tcrypto"
version = "1.0.1"
authors = ["Baidu"]
repository = "https://github.com/baidu/rust-sgx-sdk"
license-file = "LICENSE"
documentation = "https://dingelish.github.io/"
description = "Rust SGX SDK provides the ability to write Intel SGX applications in Rust Programming Language."

include = [
    "LICENSE",
    "Readme.md",
    "Cargo.toml",
    "src/crypto.rs",
    "src/lib.rs",
]

[lib]
name = "sgx_tcrypto"
crate-type = ["rlib"]

[features]
default = []

[dependencies]
sgx_types = { path = "../sgx_types" }
