[package]
name = "sgx_tcrypto_helper"
version = "1.1.3"
authors = ["The Teaclave Authors"]
repository = "https://github.com/apache/teaclave-sgx-sdk"
license-file = "LICENSE"
documentation = "https://dingelish.github.io/"
description = "Rust SGX SDK provides the ability to write Intel SGX applications in Rust Programming Language."
edition = "2018"

[lib]
name = "sgx_tcrypto_helper"
crate-type = ["staticlib","rlib"]

[features]
default = ["mesalock_sgx"]
mesalock_sgx = []

[dependencies]
sgx_crypto_helper = { path = "../sgx_crypto_helper", default-features = false, features = ["mesalock_sgx"] }
