[package]
name = "sgx_tcrypto_helper"
version = "1.1.6"
authors = ["The Teaclave Authors"]
repository = "https://github.com/apache/teaclave-sgx-sdk"
license-file = "LICENSE"
documentation = "https://teaclave.apache.org/sgx-sdk-docs/"
description = "Rust SGX SDK provides the ability to write Intel SGX applications in Rust Programming Language."
edition = "2021"

[lib]
name = "sgx_tcrypto_helper"
crate-type = ["staticlib","rlib"]

[features]
default = ["mesalock_sgx"]
mesalock_sgx = []

[dependencies]
sgx_crypto_helper = { path = "../sgx_crypto_helper", default-features = false, features = ["mesalock_sgx"] }
